[package]
name = "kmer-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
rand = "0.8.5"
bio-seq = "0.8.1"

[profile.release]
debug = true
